// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor test Render snapshot anchor 1`] = `
<AnchorLink
  anchorClasses="Anchor"
  href="test"
  label="test"
  onClick={[Function]}
  onKeyPress={[Function]}
/>
`;

exports[`Anchor test Render snapshot pseudoLink 1`] = `
<PseudoLink
  anchorClasses="Anchor"
  label="test"
  onClick={[Function]}
  onKeyPress={[Function]}
/>
`;
